# sylverant-shipgate_server

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: ship.c
